feat(service): create EmailService for movement notifications

--- a/rapidcargo-backend/src/main/resources/application.properties
+++ b/rapidcargo-backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=rapidcargo-backend
 
-# Configuration PostgreSQL
+# PostgreSQL Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuration JPA/Hibernate
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
@@ -14,5 +14,31 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 # Logs
-logging.level.com.rapidcargo=${LOG_LEVEL_APP}
-logging.level.org.hibernate.SQL=${LOG_LEVEL_SQL}
+logging.level.org.rapidcargo=${LOG_LEVEL_APP:INFO}
+logging.level.org.hibernate.SQL=${LOG_LEVEL_SQL:WARN}
+logging.level.org.springframework.mail=${LOG_LEVEL_SPRING:INFO}
+logging.level.root=${LOG_LEVEL_ROOT:INFO}
+
+# Log format
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# EMAIL CONFIGURATION
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH:true}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS_ENABLE:true}
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SMTP_SSL_TRUST:*}
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# RAPIDCARGO BUSINESS CONFIGURATION
+rapidcargo.email.cargoinfo.address=${CARGOINFO_EMAIL}
+rapidcargo.email.from.address=${EMAIL_FROM_ADDRESS}
+rapidcargo.email.from.name=${EMAIL_FROM_NAME}
+rapidcargo.email.subject=${CARGOINFO_EMAIL_SUBJECT}
+rapidcargo.warehouse.code=${WAREHOUSE_CODE:CDGRC1}
+rapidcargo.warehouse.label=${WAREHOUSE_LABEL:RapidCargo CDG}
