feat(api,service): implement REST controllers and fix service persistence

--- a/rapidcargo-backend/src/main/resources/application.properties
+++ b/rapidcargo-backend/src/main/resources/application.properties
@@ -23,17 +23,17 @@ logging.level.root=${LOG_LEVEL_ROOT:INFO}
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-# EMAIL CONFIGURATION
+
+# EMAIL CONFIGURATION - Gmail SMTP
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH:true}
-spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS_ENABLE:true}
-spring.mail.properties.mail.smtp.ssl.trust=${MAIL_SMTP_SSL_TRUST:*}
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
 
 # RAPIDCARGO BUSINESS CONFIGURATION
 rapidcargo.email.cargoinfo.address=${CARGOINFO_EMAIL}
@@ -42,3 +42,13 @@ rapidcargo.email.from.name=${EMAIL_FROM_NAME}
 rapidcargo.email.subject=${CARGOINFO_EMAIL_SUBJECT}
 rapidcargo.warehouse.code=${WAREHOUSE_CODE:CDGRC1}
 rapidcargo.warehouse.label=${WAREHOUSE_LABEL:RapidCargo CDG}
+
+# Connection Pool - HikariCP (Production Optimized)
+spring.datasource.hikari.maximum-pool-size=${DB_POOL_MAX_SIZE}
+spring.datasource.hikari.minimum-idle=${DB_POOL_MIN_IDLE}
+spring.datasource.hikari.idle-timeout=${DB_POOL_IDLE_TIMEOUT}
+spring.datasource.hikari.max-lifetime=${DB_POOL_MAX_LIFETIME}
+spring.datasource.hikari.connection-timeout=${DB_POOL_CONNECTION_TIMEOUT}
+spring.datasource.hikari.validation-timeout=${DB_POOL_VALIDATION_TIMEOUT}
+spring.datasource.hikari.leak-detection-threshold=${DB_POOL_LEAK_DETECTION}
+spring.datasource.hikari.pool-name=RapidCargoHikariPool
