git commit -m chore(frontend): finalize implementation and setup - added HTTP interceptor with loader and centralized error handling - integrated notification and spinner components - updated movements module structure and services"

--- a/rapidcargo-frontend/angular.json
+++ b/rapidcargo-frontend/angular.json
@@ -55,7 +55,13 @@
                   "maximumError": "4kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
@@ -103,5 +109,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "0fb2c58e-6553-43cf-953f-032f95af252a"
   }
 }
